achievements css fixed

--- a/src/Components/Achievements/Achievements.css
+++ b/src/Components/Achievements/Achievements.css
@@ -1,14 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Poppins:wght@200&family=Roboto:wght@500&family=Rowdies&display=swap");
 
-.achiveouter{
+.achiveouter {
   /* background-color: #0A1931; */
   background-color: rgba(10, 25, 49, 0.9);
   z-index: 1;
   position: relative;
   margin-top: -10rem;
 }
-
-
 
 .lineachi2 {
   height: 3px;
@@ -22,23 +20,22 @@
 }
 
 .lineachi1 {
-    height: 3px;
-    width: 28%;
-    color: white;
-    z-index: 30000;
-    margin: auto;
-    background-color: azure;
-    text-align: left;
-    margin-right: 0;
-  }
+  height: 3px;
+  width: 28%;
+  color: white;
+  z-index: 30000;
+  margin: auto;
+  background-color: azure;
+  text-align: left;
+  margin-right: 0;
+}
 
-
-.firstrowachive{
-  padding-top:190px ;
+.firstrowachive {
+  padding-top: 190px;
   text-align: center;
 }
 
-.timeline .achievements{
+.timeline .achievements {
   font-family: "Rowdies", cursive;
   font-size: 5rem;
 }
@@ -53,7 +50,7 @@
   content: "";
   position: absolute;
   width: 5px;
-  height: 1600px;
+  height: auto;
   background: #ffffff;
   top: 60px;
   bottom: 0;
@@ -62,13 +59,13 @@
 }
 .container {
   padding: 30px 60px;
+  margin-right: 0;
   position: relative;
   background: inherit;
   width: 60%;
 }
 .container.left {
   left: -10%;
-  
 }
 .container.right {
   left: 50%;
@@ -80,12 +77,12 @@
   position: absolute;
   width: 0;
   height: 0;
-  
+
   top: 54px;
   right: 40px;
   z-index: 1;
   border: 10px solid;
-  border-color: transparent #56B6FC transparent transparent;
+  border-color: transparent #56b6fc transparent transparent;
 }
 .container::after {
   content: "";
@@ -101,14 +98,13 @@
   z-index: 4;
   border: 4px solid;
   border-radius: 50%;
-  background-color: #17202E;
+  background-color: #17202e;
   border: 5px solid white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  
 }
 .container.right::before {
   left: 40px;
-  border-color: transparent transparent transparent #56B6FC;
+  border-color: transparent transparent transparent #56b6fc;
 }
 .container.right::after {
   left: -35px;
@@ -116,7 +112,7 @@
 .container .content {
   padding: 1rem;
   /* opacity: 0.5; */
-  background: #17202E;
+  background: #17202e;
   /* mix-blend-mode: multiply; */
   /* mix-blend-mode: screen; */
   position: relative;
@@ -133,7 +129,6 @@
   border-color: aliceblue; */
 }
 .contents {
-  
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -147,7 +142,7 @@
   font-size: 20px;
   font-weight: normal;
   /* color: #D8E3E7; */
-  color: #56B6FC;
+  color: #56b6fc;
   font-family: "Rowdies", cursive;
 }
 
@@ -156,16 +151,15 @@
   font-size: 15px;
   line-height: 22px;
   /* color: #719FB0; */
-  color: #D8E3E7;
+  color: #d8e3e7;
   /* font-family: "Rowdies", cursive; */
   font-weight: bold;
-
 }
-.achievementDevicer{
+.achievementDevicer {
   margin: auto;
   width: 300px;
   height: 4px;
-  background-color: #868B8E;
+  background-color: #868b8e;
   border-radius: 100px;
   /* margin: 60px auto 0; */
   margin-bottom: 50px;
@@ -173,26 +167,24 @@
 .devicer {
   position: relative;
   /* top: 10px; */
-  left: 10px;
-  width: 10em;
-  display: block;
+  left: -5px;
+  width: auto;
+  /* display: block; */
   height: 2px;
   background-color: white;
   margin-top: 10px;
-  border-radius: 500px;
+  /* border-radius: 500px; */
 
   /* margin: 60px auto 0; */
 }
 .image-container {
   width: 500px;
-  height: 300px; 
+  height: 300px;
   /* aspect-ratio: 16/9; */
   background-size: cover;
   z-index: 100;
-  
 }
 .image {
-  
   width: 240px;
   height: 210px;
   border-radius: 20px;
@@ -217,12 +209,19 @@
     left: 40px;
   }
   .container {
-    width: 103%;
+    width: 90%;
+    padding: 21px 27px;
     /* padding-left: 80px;
     padding-right: 30px; */
   }
   .container::after {
-    left: -35px;
+    left: -20px;
+    width: 30px;
+    height: 30px;
+    background-size: 20px;
+  }
+  .container.right::after {
+    left: -20px;
   }
   .container.left {
     left: 40px;
@@ -233,20 +232,22 @@
 
   .container.left::before,
   .container.right::before {
-    left: 40px;
-    border-color: transparent transparent transparent #e94b3c;
+    top: 45px;
+    left: 22px;
+    border: 5px solid;
+    border-color: transparent transparent transparent #56b6fc;
   }
   .container .content h2 {
-    font-size: 8px;
-    line-height: 8.2px;
+    font-size: 12px;
+    line-height: 11px;
   }
   .container .content p {
-    font-size: 6px;
-    line-height: 6.2px;
+    font-size: 9px;
+    line-height: 8px;
   }
   .image {
-    width: 150px;
-    height: 100px;
+    width: 170px;
+    height: 150px;
     border-radius: 20px;
   }
 }
