--- a/src/Components/Project-home.css
+++ b/src/Components/Project-home.css
@@ -5,11 +5,11 @@
   /* background-color: #141820; */
   background-color: rgba(18, 21, 33, 0.9);
 
-  position: relative;
+  /* position: relative; */
   /* top:-90px; */
   z-index: 100;
   padding-top: 30px;
-  height: 850px;
+  height: auto;
 }
 
 .project-section {
@@ -34,33 +34,32 @@
 }
 
 .lineourproject2 {
-    height: 3px;
-    width: 35%;
-    color: white;
-    z-index: 30000;
-    margin: auto;
-    background-color: azure;
-    text-align: left;
-    margin-left: 0;
-  }
-  
-  .lineourproject1 {
-      height: 3px;
-      width: 35%;
-      color: white;
-      z-index: 30000;
-      margin: auto;
-      background-color: azure;
-      text-align: left;
-      margin-right: 0;
-  }
+  height: 3px;
+  width: 35%;
+  color: white;
+  z-index: 30000;
+  margin: auto;
+  background-color: azure;
+  text-align: left;
+  margin-left: 0;
+}
 
-  .firstrowourproject {
-    z-index: 100;
-    text-align: center;
-    margin-bottom: 20px;
-  }
+.lineourproject1 {
+  height: 3px;
+  width: 35%;
+  color: white;
+  z-index: 30000;
+  margin: auto;
+  background-color: azure;
+  text-align: left;
+  margin-right: 0;
+}
 
+.firstrowourproject {
+  z-index: 100;
+  text-align: center;
+  margin-bottom: 20px;
+}
 
 .project-container {
   display: flex;
@@ -69,11 +68,11 @@
   flex-direction: row;
 }
 
-@media (max-width: 800px){
-  .project-container{
+/* @media (max-width: 800px) {
+  .project-container {
     flex-direction: column;
   }
-}
+} */
 
 .link-active {
   text-decoration: none;
@@ -153,25 +152,41 @@
   padding-right: 0px;
 }
 .title1ourproject {
-    font-family: "Rowdies", cursive;
-    font-size: 1.5rem;
-    color: #b2daf1;
-    padding: 10px;
-  }
+  font-family: "Rowdies", cursive;
+  font-size: 1.5rem;
+  color: #b2daf1;
+  padding: 10px;
+}
 
 .project-description {
   color: white;
   padding: 10px 20px;
 }
 
+.project-image {
+  padding: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 20px;
+  width: 92%;
+  height: fit-content;
+}
 
-
-
-.project-image{
-    padding: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
-    border-radius: 20px;
-    width: 92%;
-    height: fit-content;
+@media (max-width: 767.98px) {
+  .project-container {
+    flex-direction: column;
+  }
+  .p-container {
+    margin: 10px;
+    width: auto;
+  }
+  .project-image {
+    width: 60%;
+  }
+  .title1ourproject {
+    font-size: 1rem;
+  }
+  .project-description {
+    font-size: 0.8rem;
+  }
 }
