--- a/src/Components/Project.css
+++ b/src/Components/Project.css
@@ -1,10 +1,9 @@
-.projecttitle{
+.projecttitle {
   overflow: hidden;
   text-align: center;
   color: #ffffff;
-  font-family: 'Rowdies', cursive;
+  font-family: "Rowdies", cursive;
   font-size: 5rem;
-  
 }
 .projectsp {
   margin-top: -10rem;
@@ -16,8 +15,8 @@
   z-index: 1;
 }
 
-.firstrowproject{
-  padding-top:190px ;
+.firstrowproject {
+  padding-top: 190px;
   text-align: center;
   margin-bottom: 30px;
 }
@@ -38,7 +37,6 @@
 } */
 
 .grid-item {
-
   border-radius: 1rem;
   overflow: hidden;
   cursor: pointer;
@@ -52,8 +50,8 @@
   transform: scale(1.1);
   box-shadow: 0rem 0rem 1rem rgba(0, 0, 0, 0.5);
 }
-.card{
-  display:grid;
+.card {
+  display: grid;
 }
 .card-img1 {
   display: block;
@@ -62,7 +60,6 @@
   height: 25rem;
   object-fit: cover;
   object-position: top;
-  
 }
 
 .card-img2 {
@@ -86,13 +83,13 @@
 .card-content {
   border-radius: 5%;
   padding: 2rem;
-  background: linear-gradient(#292828,black);
+  background: linear-gradient(#292828, black);
 }
 
 .card-header {
   font-size: 2.5rem;
   font-weight: 500;
-  color: #00A0FF;
+  color: #00a0ff;
   text-align: center;
   margin-bottom: 1.5rem;
   font-weight: bold;
@@ -114,8 +111,8 @@
   font-size: 2rem;
   text-align: center;
   color: #ff4322;
-  background-color: white ;
-  background: linear-gradient(#292828,black);
+  background-color: white;
+  background: linear-gradient(#292828, black);
   border: none;
   border-radius: 2rem;
   transition: 0.2s;
@@ -132,105 +129,100 @@
 .card-btn:active span {
   margin-left: 1.5rem;
 }
- @media only screen and (max-width: 1056px) and (min-width: 769px){
-  .projectsp{
-    height: 183rem;
-    margin-top: -30rem;
-  }
-  .grid{
-    width:30rem;
+@media only screen and (max-width: 1056px) and (min-width: 769px) {
+  .grid {
+    width: 30rem;
     display: i;
   }
 }
 
 @media (max-width: 768px) {
-   .projectsp{
-    height: 80rem;
+  .projectsp {
+    height: auto;
     margin-top: -15rem;
     padding: 3rem;
   }
-  .projecttitle{
+  .projecttitle {
     overflow: hidden;
     text-align: center;
     color: #ffffff;
-    font-family: 'Rowdies', cursive;
+    font-family: "Rowdies", cursive;
     margin-top: 3rem;
     font-size: 2.5rem;
-    
   }
-  .card{
+  .card {
     display: flex;
     grid-template-rows: auto;
-  } 
+  }
   .card-img1 {
-      display: block;
-  width: 70%;
-  border-radius: 5%;
-  height: fit-content;
-  object-fit: cover;
-  object-position: top;
+    display: block;
+    width: 70%;
+    border-radius: 5%;
+    height: fit-content;
+    object-fit: cover;
+    object-position: top;
   }
   .card-img2 {
     display: block;
-  width: 70%;
-  border-radius: 5%;
-  height: fit-content;
-  object-fit: cover;
-  object-position: top;
-  }  
+    width: 70%;
+    border-radius: 5%;
+    height: fit-content;
+    object-fit: cover;
+    object-position: top;
+  }
   .card-img3 {
     display: block;
-  width: 70%;
-  border-radius: 5%;
-  height: fit-content;
-  object-fit: cover;
-  object-position: top;
+    width: 70%;
+    border-radius: 5%;
+    height: fit-content;
+    object-fit: cover;
+    object-position: top;
   }
-  .card-content{
-      border-radius: 5%;
-      background: linear-gradient(#292828,black);
-      height: 16.5rem;
-    }
-    .card-header {
-      font-size: 1rem;
-      font-weight: 500;
-      color: #00A0FF;
-      text-align: center;
-      margin-bottom: 1rem;
-      font-weight: bold;
-      margin-left: 1.6rem;
-      width: 60%;
-    }
-    .card-text {
-      font-size: .6rem;
-      letter-spacing: 0.1rem;
-      line-height: 1.7;
-      color: #ffffff;
-      text-align: center;
-    }
-    
-    .card-btn {
-      display: block;
-      width: 100%;
-      padding: .75rem;
-      font-size: 0.75rem;
-      text-align: center;
-      color: #ff4322;
-      margin-left: 0rem;
-      background: linear-gradient(#2c2323,black);
-      border: none;
-      border-radius: 10%;
-      transition: 0.2s;
-      cursor: pointer;
-      letter-spacing: 0.1rem;
-    }
-    .card-btn:hover span,
-.card-btn:active span {
-  margin-left: 1rem;
-}
+  .card-content {
+    border-radius: 5%;
+    background: linear-gradient(#292828, black);
+    height: 16.5rem;
+  }
+  .card-header {
+    font-size: 1rem;
+    font-weight: 500;
+    color: #00a0ff;
+    text-align: center;
+    margin-bottom: 1rem;
+    font-weight: bold;
+    margin-left: 1.6rem;
+    width: 60%;
+  }
+  .card-text {
+    font-size: 0.6rem;
+    letter-spacing: 0.1rem;
+    line-height: 1.7;
+    color: #ffffff;
+    text-align: center;
+  }
+
+  .card-btn {
+    display: block;
+    width: 100%;
+    padding: 0.75rem;
+    font-size: 0.75rem;
+    text-align: center;
+    color: #ff4322;
+    margin-left: 0rem;
+    background: linear-gradient(#2c2323, black);
+    border: none;
+    border-radius: 10%;
+    transition: 0.2s;
+    cursor: pointer;
+    letter-spacing: 0.1rem;
+  }
+  .card-btn:hover span,
+  .card-btn:active span {
+    margin-left: 1rem;
+  }
 }
 
-.background{
+.background {
   transform: scale(0.7);
   z-index: 5;
 }
