--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ h1 {
   background: linear-gradient(to right top, rgb(0, 1, 88), rgb(0, 0, 0));
   transition: 0.5s ease;
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 /* Landing page */
