--- a/src/Components/AboutTemp/About-temp.css
+++ b/src/Components/AboutTemp/About-temp.css
@@ -42,15 +42,15 @@
 }
 
 .lineaboutus1 {
-    height: 3px;
-    width: 38%;
-    color: white;
-    z-index: 30000;
-    margin: auto;
-    background-color: azure;
-    text-align: left;
-    margin-right: 0;
-  }
+  height: 3px;
+  width: 38%;
+  color: white;
+  z-index: 30000;
+  margin: auto;
+  background-color: azure;
+  text-align: left;
+  margin-right: 0;
+}
 
 .secondrow {
   display: flex;
@@ -137,4 +137,13 @@
   color: #e7f2f8;
   font-size: 1rem;
   padding: 20px 0;
+}
+@media (max-width: 768px) {
+  .thirdrow {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    padding: 20px;
+    padding-bottom: 40px;
+  }
 }
