--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -2,46 +2,29 @@
   background-color: rgba(10, 25, 49, 0.9);
   position: relative;
   z-index: 1;
-  top: -5rem;
-  height: 700px;
+  top: -3rem;
+  height: 100%;
 }
-.item1 {
-  grid-area: header;
+.headingcontainer{
+      position: relative;
+      margin-top: 5%;
+      margin-left: 13%;
+      padding: 10px;
+      font-size: 2rem;
 }
-.item2 {
-  grid-area: menu;
+img{
+  font-size: 25px;
 }
-.item3 {
-  grid-area: main;
-}
-.item4 {
-  grid-area: right;
-}
-.item5 {
-  grid-area: footer;
-}
-.item6 {
-  grid-area: submit;
+.fullform{
+      margin: 4vw auto;
+      width: 75%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
 }
 
-.grid-container-contactus {
-  display: grid;
-  grid-template-areas:
-    "header header header header header header"
-    "menu menu main main right right"
-    "footer footer footer footer right right"
-    "submit submit submit submit submit submit";
-  grid-gap: 0px;
-  padding: 30px;
-  margin: 0rem 0;
+input[type="text"], input[type="email"]{
   width: 100%;
-  padding-left: 15rem;
-  padding-top: 100px;
-}
-
-input[type="text"],
-select {
-  width: 90%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
@@ -50,97 +33,76 @@ select {
   box-sizing: border-box;
   font-family: "Raleway", sans-serif;
 }
-
-.message-box {
-  height: 100px;
-  font-family: "Raleway", sans-serif;
-  width: 95%;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  resize: none;
-  font-family: "Raleway", sans-serif;
-  padding-left: 10px;
-  padding-top: 10px;
-}
-.grid-container-contactus > div {
-  padding: 20px 0;
-  font-size: 30px;
+.leftform{
+  display: flex;
+  flex-direction: column;
 }
 
-.line {
-  text-align: left;
-  width: 7%;
-  margin-left: 0;
-  margin-top: 0;
-  height: 4px;
+.nameandemail{
+  display: flex;
+}
+
+.name, .emails{
+  margin: 5px;
+  width: 20vw;
+}
+
+.textar{
+  margin-left: 5px;
+  width: 104%;
+  height: 220%;
+}
+
+
+button{
+  margin-top: 10px;
+}
+
+button:hover{
   background-color: white;
-  border: 0px;
+  color: rgb(0, 162, 255);
+  font-weight: bolder;
+  cursor: pointer;
 }
 
-.get-in-touch {
-  font-family: "Rowdies", cursive;
-  font-size: larger;
-  margin-bottom: 1%;
+.rightside{
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+}
+.email, .phone, .linkedin{
+  display: flex;
+  align-items: center;
+  height: 11vh;
 }
 
-.send-email-line {
-  font-family: "Raleway", sans-serif;
-  font-size: medium;
-  color: white;
+.infoemail, .infophone, .infolink{
+  margin-left: 30px;
 }
 
-.contact-info {
-  font-family: "Raleway", sans-serif;
-  font-size: larger;
+.button{
+  width: 40%;
 }
 
-.t1 {
-  font-family: "Raleway", sans-serif;
-  font-size: medium;
-  display: inline;
-  position: relative;
-  top: -4px;
-  padding: 5px;
+@media(max-width: 770px)
+{
+  .rightside{
+    margin-top: 20px;
+  }
+  .nameandemail{
+    flex-direction: column;
+  }
+  .name{
+    width: 60vw;
+  }
+  .emails{
+    width: 60vw;
+    margin-bottom: 10px;
+  }
 }
-
-.img-t1 {
-  font-family: "Raleway", sans-serif;
-  font-size: medium;
-  height: 20px;
-}
-.info-t1 {
-  font-family: "Open Sans", sans-serif;
-  font-size: medium;
-}
-
-/*     send button   */
-
-.send-button {
-  background-color: #2196f3;
-  padding: 10px;
-  color: white;
-  border: 10px white;
-  border-radius: 10px;
-  width: 10%;
-}
-
-br {
-  margin: 0;
-}
-
-.item4 {
-  text-align: left;
-  padding: 10px;
-  margin: left 5px;
-}
-
-form {
-  font-size: 1rem;
-}
-
-.message-box {
-  font-size: 1rem;
-}
-.send-button {
-  font-size: 1rem;
+@media(max-width: 800px)
+{
+  .rightside{
+    margin-left: 20px;
+  }
 }
