--- a/src/App.css
+++ b/src/App.css
@@ -225,7 +225,8 @@ color: white;
   border-radius: 10px;
   flex: 0 0 22%;
   margin: 1rem 1rem;
-  height: 43vh;
+  height: 410px;
+  max-width: 50%;
   /* z-index: 6; */
 }
 .profile-card:hover {
@@ -257,6 +258,7 @@ color: white;
   top: 0px;
   z-index: 6;
   margin-bottom: 2rem;
+  margin-top: 1.5rem;
 }
 
 .profile-card .text h3 {
@@ -307,6 +309,48 @@ color: white;
 .profile-card .links .fa:hover {
   background: #03a9f4;
   color: #fff;
+}
+
+@media screen and (max-width:1200px)  and (min-width:800px) {
+  .profile-card .text img{
+    height: 120px;
+  }
+  .department-container {
+    width: 60%;
+  }
+
+  .profile-card {
+    flex: 0 0 40%;
+    height: 400px;
+  }
+}
+
+@media screen and (max-width:800px) and (min-width:450px){
+  .department-container {
+    width:90%;
+  }
+
+  .profile-card {
+    flex: 0 0 40%;
+    width: 50%;
+    height: 400px;
+  }
+}
+
+@media screen and (max-width:700px){
+  
+  .profile-card .text img{
+    height: 110px;
+  }
+
+  .department-container {
+    width:100%;
+  }
+
+  .profile-card{
+    flex: 0 0 100%;
+    height: 350px;
+  }
 }
 
 /* ABOUT */
