teacher section added

--- a/src/Components/AboutTemp/About-temp.css
+++ b/src/Components/AboutTemp/About-temp.css
@@ -67,6 +67,7 @@
 .secondrowcol2 {
   display: flex;
   flex-direction: column;
+
   width: 50%;
   height: 500px;
   margin: 20px;
@@ -145,5 +146,24 @@
     text-align: left;
     padding: 20px;
     padding-bottom: 40px;
+  }
+}
+
+@media (max-width: 768px) {
+  .secondrow {
+    flex-direction: column;
+  }
+  .secondrowcol1 {
+    width: auto;
+    background-size: 300px;
+    height: auto;
+    margin: 0;
+  }
+  .ourcollegeimg {
+    height: auto;
+  }
+  .secondrow {
+    justify-content: center;
+    align-items: center;
   }
 }
