--- a/src/Components/AboutTemp/About-temp.css
+++ b/src/Components/AboutTemp/About-temp.css
@@ -55,7 +55,7 @@
 .secondrow {
   display: flex;
   flex-direction: row;
-  padding: 20px;
+  padding: 60px;
 }
 
 .secondrowcol1 {
@@ -69,7 +69,7 @@
   flex-direction: column;
   width: 50%;
   height: 500px;
-  margin: 20px;
+  margin: 20px 0;
 }
 
 .div1 {
