project bug found and solved

--- a/src/Components/Project-home.css
+++ b/src/Components/Project-home.css
@@ -5,7 +5,7 @@
   /* background-color: #141820; */
   background-color: rgba(18, 21, 33, 0.9);
 
-  /* position: relative; */
+  position: relative;
   /* top:-90px; */
   z-index: 100;
   padding-top: 30px;
