--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -41,7 +41,6 @@ li {
   top: -50px;
   transition: all 0.3s ease;
   font-family: "Roboto", sans-serif;
-  /* opacity: 0; */
 }
 
 .nav-link {
@@ -58,12 +57,10 @@ li {
 .nav-item .nav-link:hover .icon {
   transform: translateY(60px);
   color: white;
-  /* opacity: 0; */
 }
 
 .nav-item .nav-link:hover .title {
   transform: translateY(60px);
-  opacity: 1;
 }
 
 .nav-link .achievements {
@@ -111,4 +108,42 @@ li {
   position: relative;
   top: -12px;
   z-index: 22;
+}
+@media (max-width: 768px) {
+  .nav-link .title {
+    position: relative;
+    top: -42px;
+    transition: all 0.3s ease;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+  }
+  .nav-container {
+  display: flex;
+  width: 144%;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+  margin-left: -21%;
+}
+.nav-link::after {
+  content: " ";
+  display: inline-block;
+  height: 51px;
+  width: 51px;
+  background-color: #00a0ff;
+  position: absolute;
+  transform: translate(-37px, -14px) ;
+  border-radius: 50%;
+  transition: all 0.3s ease;
+  opacity: 0;
+  border: 10px solid black;
+}
+.nav-link:hover:after {
+  transform: translate(-39px, -18px);
+  opacity: 1;
+}
+.active:after {
+  transform: translate(-39px, -18px);
+  opacity: 1;
+}
 }
