--- a/src/App.css
+++ b/src/App.css
@@ -218,14 +218,16 @@ color: white;
 
 /*//////////////  Profile Card  ///////////////*/
 .profile-card {
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  /* box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px; */
+  background-color: #17202e;
+
   display: inline-flex;
   flex-direction: column;
   align-items: center;
   border-radius: 10px;
   flex: 0 0 22%;
   margin: 1rem 1rem;
-  height: 410px;
+  height: 380px;
   max-width: 50%;
   /* z-index: 6; */
 }
