--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,11 +1,58 @@
 .contactusouter {
-  background-color: rgba(10, 25, 49, 0.9);
+  background-color: rgba(10, 25, 49, 0.8);
   position: relative;
   z-index: 1;
-  top: -3rem;
-  height: 100%;
+  margin-top: -10rem;
 }
-.headingcontainer {
+
+
+.contfirstrow {
+  z-index: 100;
+  text-align: center;
+  padding-top: 190px;
+}
+
+.contwheredowe {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1rem;
+  padding-top: 40px;
+  color: #57b8ff;
+  letter-spacing: 0.5em;
+}
+.contaboutusheading {
+  font-family: "Rowdies", cursive;
+  font-size: 2.5rem;
+  padding: 20px;
+}
+.seperator {
+  display: flex;
+  margin: auto;
+}
+
+.contline2 {
+  height: 3px;
+  width: 28%;
+  color: white;
+  z-index: 30000;
+  margin: auto;
+  background-color: azure;
+  text-align: left;
+  margin-left: 0;
+}
+
+.contline1 {
+  height: 3px;
+  width: 28%;
+  color: white;
+  z-index: 30000;
+  margin: auto;
+  background-color: azure;
+  text-align: left;
+  margin-right: 0;
+}
+
+
+.contheadingcontainer {
   position: relative;
   margin-top: 1%;
   margin-left: 13%;
