--- a/src/Components/CoreTeam/deck2.css
+++ b/src/Components/CoreTeam/deck2.css
@@ -3,6 +3,6 @@
     /* background-color: #0a1931; */
     background-color: rgba(10, 25, 49, 0.9);
     z-index: 100;
-    opacity: 1;
+    /* opacity: 1; */
     height: 750px;
 }
