--- a/src/App.css
+++ b/src/App.css
@@ -195,16 +195,7 @@ color: white;
 /* FOOTER */
 
 /* ///////////////// Depatment ////////////////// */
-
-.department-title {
-  text-align: center;
-  margin-top: 5rem;
-  color: #00a0ff;
-  font-size: 3rem;
-  z-index: 6;
-}
-
-.department-container {
+/* .department-container {
   display: flex;
   justify-content: space-evenly;
   width: 80%;
@@ -214,146 +205,7 @@ color: white;
   flex-wrap: wrap;
   margin: 5rem 0 10rem 0;
   z-index: 6;
-}
-
-/*//////////////  Profile Card  ///////////////*/
-.profile-card {
-  /* box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px; */
-  background-color: #17202e;
-
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 10px;
-  flex: 0 0 22%;
-  margin: 1rem 1rem;
-  height: 380px;
-  max-width: 50%;
-  /* z-index: 6; */
-}
-.profile-card:hover {
-  background-color: #2760a0;
-  box-shadow: 0px 0px 10px 0px #3869a0;
-  z-index: 3;
-  backdrop-filter: blur(4.5px);
-  -webkit-backdrop-filter: blur(4.5px);
-  border-radius: 10px;
-  max-width: 50%;
-}
-
-.profile-card .text {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: stretch;
-  height: 100%;
-  width: 100%;
-  /* margin: 2rem 0; */
-  z-index: 6;
-}
-
-.profile-card .text img {
-  height: 150px;
-  border-radius: 50%;
-  margin-bottom: 10px;
-  position: relative;
-  top: 0px;
-  z-index: 6;
-  margin-bottom: 2rem;
-  margin-top: 1.5rem;
-}
-
-.profile-card .text h3 {
-  color: white;
-  font-size: 20px;
-  font-weight: 1000;
-}
-
-.profile-card .text p {
-  color: white;
-  font-size: 15px;
-  text-align: center;
-  padding: 20px 0 10px 0;
-}
-
-.profile-card .links {
-  width: 30%;
-  display: flex;
-  justify-content: space-evenly;
-  padding-bottom: 10px;
-}
-
-.profile-card .links .ul {
-  position: relative;
-  display: flex;
-}
-
-.profile-card .links .li {
-  list-style: none;
-  margin-left: 5px;
-  margin-right: 5px;
-}
-
-.profile-card .links .fa {
-  width: 45px;
-  height: 45px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  background: transparent;
-  color: #fff;
-  text-decoration: none;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  transition: 0.5s;
-}
-
-.profile-card .links .fa:hover {
-  background: #03a9f4;
-  color: #fff;
-}
-
-@media screen and (max-width:1200px)  and (min-width:800px) {
-  .profile-card .text img{
-    height: 120px;
-  }
-  .department-container {
-    width: 60%;
-  }
-
-  .profile-card {
-    flex: 0 0 40%;
-    height: 400px;
-  }
-}
-
-@media screen and (max-width:800px) and (min-width:450px){
-  .department-container {
-    width:90%;
-  }
-
-  .profile-card {
-    flex: 0 0 40%;
-    width: 50%;
-    height: 400px;
-  }
-}
-
-@media screen and (max-width:700px){
-  
-  .profile-card .text img{
-    height: 110px;
-  }
-
-  .department-container {
-    width:100%;
-  }
-
-  .profile-card{
-    flex: 0 0 100%;
-    height: 350px;
-  }
-}
+} */
 
 /* ABOUT */
 /* 
