--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,77 +1,40 @@
-.contactusouter {
-  background-color: rgba(10, 25, 49, 0.8);
-  position: relative;
-  z-index: 1;
-  margin-top: -10rem;
-}
+/* CONTACT FORM MAIN HEADLINES */
 
-
-.contfirstrow {
-  z-index: 100;
+.contact_headline_div{
   text-align: center;
-  padding-top: 190px;
+  padding-bottom: 15px;
 }
-
-.contwheredowe {
+.contact_headline{
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 1rem;
-  padding-top: 40px;
+  font-size: 1.2rem;
+  margin-top: 3.5rem;
   color: #57b8ff;
   letter-spacing: 0.5em;
 }
-.contaboutusheading {
-  font-family: "Rowdies", cursive;
-  font-size: 2.5rem;
-  padding: 20px;
-}
-.seperator {
-  display: flex;
-  margin: auto;
-}
-
-.contline2 {
-  height: 3px;
-  width: 28%;
-  color: white;
-  z-index: 30000;
-  margin: auto;
-  background-color: azure;
-  text-align: left;
-  margin-left: 0;
-}
-
-.contline1 {
-  height: 3px;
-  width: 28%;
-  color: white;
-  z-index: 30000;
-  margin: auto;
-  background-color: azure;
-  text-align: left;
-  margin-right: 0;
+.contact_fillform_div{
+      position: relative;
+      margin-top: 0.5%;
+      margin-bottom: 2%;
+      padding: 10px;
+      font-size: 2rem;
+      text-align: center;
 }
 
 
-.contheadingcontainer {
-  position: relative;
-  margin-top: 1%;
-  margin-left: 13%;
-  padding: 10px;
-  font-size: 2rem;
-}
-img {
-  font-size: 25px;
-}
-.fullform {
-  margin: 4vw auto;
-  width: 75%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+/* CONTACT FULL FORM */
+
+.contact_form_details{
+      margin: 4vw auto;
+      width: 80%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
 }
 
-input[type="text"],
-input[type="email"] {
+
+/* CONTACT LEFT FORM */
+
+input[type="text"], input[type="email"]{
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -81,98 +44,114 @@ input[type="email"] {
   box-sizing: border-box;
   font-family: "Raleway", sans-serif;
 }
-.leftform {
-  display: flex;
-  flex-direction: column;
-}
-
-.nameandemail {
+.contact_name_email_div{
   display: flex;
 }
-
-.name,
-.emails {
+.contact_form_name, .contact_form_email{
   margin: 5px;
   width: 20vw;
 }
-
-.textar {
+.contact_form_textarea_div{
   margin-left: 5px;
   width: 104%;
   height: 220%;
 }
-
-.send-button {
+button{
   margin-top: 10px;
-  transition: all 0.3s ease;
 }
-
-.send-button:hover {
+button:hover{
   background-color: white;
-  color: rgb(0, 0, 0);
+  color: rgb(0, 162, 255);
   font-weight: bolder;
   cursor: pointer;
 }
+.contact_sendbtn{
+  background-color: #2196f3;
+  padding: 10px;
+  color: white;
+  border: 10px white;
+  border-radius: 20px;
+  width: 30%;
+}
+.contact_textarea {
+  height: 130px;
+  width: 95%;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  resize: none;
+  padding-left: 10px;
+  padding-top: 10px;
+  font: 1rem "Raleway", sans-serif;
+}
+form {
+  font-size: 1rem;
+}
 
-.rightside {
+
+
+/* CONTACT RIGHTSIDE DETAILS */
+.contact_information_div{
   display: flex;
   flex-direction: column;
   /* justify-content: space-between; */
 }
-.email,
-.phone,
-.linkedin {
+.contact_info_email_div, .contact_info_phone_div, .contact_info_linkedin_div{
   display: flex;
   align-items: center;
   height: 11vh;
 }
-
-.infoemail,
-.infophone,
-.infolink {
+.contact_infoemail, .contact_infophone, .contact_infolink{
   margin-left: 30px;
 }
-
-.button {
-  width: 40%;
+.contact_fillform {
+  font-family: "Raleway", sans-serif;
+  font-size: medium;
+  color: white;
+  text-align: center;
+}
+.contact_info_headline {
+  font-family: "Rowdies", cursive;
+  font-size: 1.5rem;
+  color: #2196f3;
+}
+img{
+  font-size: 25px;
+}
+.contact_info_subhead {
+  font-family: "Raleway", sans-serif;
+  font-size: medium;
+  display: inline;
+  position: relative;
+}
+.contact_all_information {
+  font-family: "Open Sans", sans-serif;
+  font-size: medium;
 }
 
-@media (max-width: 770px) {
-  .rightside {
-    margin-top: 20px;
+
+/* MEDIA QUERIES */
+  @media(max-width: 790px)
+  {
+    .contact_name_email_div{
+      flex-direction: column;
+    }
+    .contact_form_name{
+      width: 60vw;
+    }
+    .contact_form_email{
+      width: 60vw;
+      margin-bottom: 10px;
+    }
   }
-  .nameandemail {
-    flex-direction: column;
+  @media(max-width: 800px)
+  {
+    .contact_information_div{
+      margin-left: 20px;
+    }
   }
-  .name {
-    width: 60vw;
+  @media(max-width: 790px)
+  {
+    .contact_information_div{
+      margin-top: 20px;
+    }
   }
-  .emails {
-    width: 60vw;
-    margin-bottom: 10px;
-  }
-}
-@media (max-width: 768px) {
-  .rightside {
-    margin-left: 20px;
-  }
-  .fullform {
-    justify-content: center;
-  }
-  .email,
-  .phone,
-  .linkedin {
-    height: 7vh;
-  }
-  .headingcontainer {
-    text-align: center;
-    margin: 0;
-  }
-  .message-box {
-    width: 93%;
-  }
-  .send-button {
-    padding: 10px 40px;
-    width: auto;
-  }
-}
