--- a/src/App.css
+++ b/src/App.css
@@ -469,7 +469,7 @@ select {
 .dept-grid-box:hover {
   /* transform: translateY(-0.9%); */
   /* box-shadow: 0 4rem 8rem rgba(0, 0, 0, 0.5); */
-  border-color: white;
+  /* border-color: white; */
 }
 
 /* ACHIEVEMENTS */
