--- a/src/Components/Projects/Project.css
+++ b/src/Components/Projects/Project.css
@@ -1,16 +1,31 @@
 @import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Open+Sans+Condensed:wght@300&family=Poppins:wght@200&family=Roboto:wght@500&family=Rowdies&display=swap");
 
-.outermost-project {
-  /* margin-bottom: 50px; */
-  /* background-color: #141820; */
-  background-color: rgba(18, 21, 33, 0.9);
-
-  position: relative;
-  /* top:-90px; */
-  z-index: 100;
-  padding-top: 30px;
+.project-page {
+  margin-top: -10rem;
+  background-color: rgba(10, 25, 49, 0.8);
   padding-bottom: 80px;
-  height: auto;
+  position: relative;
+  z-index: 1;
+}
+
+.project-header {
+  padding-top: 190px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.project-moto{
+  font-family: "Roboto Condensed", sans-serif;
+    font-size: 1rem;
+    padding-top: 40px;
+    color: #57b8ff;
+    letter-spacing: 0.5em;
+}
+
+.project-page-title{
+  font-family: "Rowdies", cursive;
+    font-size: 2.5rem;
+    padding: 20px;
 }
 
 .project-section {
@@ -62,7 +77,7 @@
   margin-bottom: 20px;
 }
 
-.project-container {
+.projects-container {
   display: flex;
   text-align: center;
   margin: auto;
@@ -85,7 +100,7 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
-.p-container {
+.individual-project-container {
   text-align: center;
   background-color: #17202e;
   z-index: 2;
@@ -98,7 +113,7 @@
   border-radius: 20px;
 }
 
-.projectline {
+.project-decoration-line {
   height: 2px;
   background-color: white;
   width: 90%;
@@ -124,7 +139,6 @@
   text-decoration: none;
   margin-left: auto;
   display: block;
-  /* padding-right:10px ; */
   font-size: 0.8rem;
   text-align: center;
   color: #719fb0;
@@ -135,7 +149,6 @@
   transition: 0.2s;
   cursor: pointer;
   letter-spacing: 0.1rem;
-  /* margin-right: 20px; */
 }
 .project-card-btn span {
   transition: 0.2s;
@@ -143,6 +156,7 @@
 .project-card-btn:hover span,
 .project-card-btn:active span {
   margin-left: 1rem;
+  background: none;
 }
 
 .project-heading2 {
@@ -152,7 +166,7 @@
   padding-left: 0px;
   padding-right: 0px;
 }
-.title1ourproject {
+.project-title {
   font-family: "Rowdies", cursive;
   font-size: 1.5rem;
   color: #b2daf1;
@@ -174,20 +188,21 @@
 }
 
 @media (max-width: 767.98px) {
-  .project-container {
+  .projects-container {
     flex-direction: column;
   }
-  .p-container {
+  .individual-project-container {
     margin: 10px;
     width: auto;
   }
   .project-image {
     width: 60%;
   }
-  .title1ourproject {
+  .project-title {
     font-size: 1rem;
   }
   .project-description {
     font-size: 0.8rem;
   }
 }
+
