--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -101,9 +101,11 @@
 }
 .footer_social_img {
   transition: all 0.3s ease;
+  border-radius: 12px;
 }
 .footer_social_img:hover {
   transform: rotate(360deg);
+  box-shadow: 0px 0px 2px 4px #0ff;
 }
 .footer_copyrights {
   text-align: center;
