--- a/src/Components/home-projects/Project-home.css
+++ b/src/Components/home-projects/Project-home.css
@@ -192,17 +192,17 @@
 }
 
 @media (max-width: 767.98px) {
-  .home-project-container {
+  .home-projects-container {
     flex-direction: column;
   }
-  .home-projects-container {
+  .home-individual-project-container {
     margin: 10px;
     width: auto;
   }
   .home-project-image {
     width: 60%;
   }
-  .title1ourproject {
+  .home-project-title {
     font-size: 1rem;
   }
   .home-project-description {
