--- a/src/Components/Teacher/Teacher.css
+++ b/src/Components/Teacher/Teacher.css
@@ -1,33 +1,33 @@
-.teacher {
+.home-teacher-component {
     background: rgba(20, 24, 32, 0.9);
 
     position: relative;
     z-index: 100;
 }
 
-.teachfirstrow {
+.home-teacher-header {
     z-index: 100;
     text-align: center;
   }
 
-  .teachwheredowe {
+  .home-teacher-moto {
     font-family: "Roboto Condensed", sans-serif;
     font-size: 1rem;
     padding-top: 40px;
     color: #57b8ff;
     letter-spacing: 0.5em;
   }
-  .teachaboutusheading {
+  .home-teacher-title {
     font-family: "Rowdies", cursive;
     font-size: 2.5em;
     padding: 20px;
   }
-  .teachseperator {
+  .home-teacher-seperator {
     display: flex;
     margin: auto;
   }
 
-  .teachlineaboutus2 {
+  .home-teacher-decoration-line2 {
     height: 3px;
     width: 32%;
     color: white;
@@ -38,7 +38,7 @@
     margin-left: 0;
   }
 
-  .teachlineaboutus1 {
+  .home-teacher-decoration-line1 {
     height: 3px;
     width: 32%;
     color: white;
@@ -49,40 +49,141 @@
     margin-right: 0;
   }
 
-.cflex{
+.home-teacher-content{
     display: flex;
     /* justify-content: space-between; */
     align-items: center;
     padding: 5rem;
+    /* margin: auto; */
     /* height: 80vh; */
     /* column-gap: 6rem; */
 }
 
-.para{
+.home-teacher-text{
     width: 50%;
     padding-left: 130px;
 }
-.teachername{
+.home-teacher-name{
   font-family: "Rowdies", cursive;
   color: #57b8ff;
+  font-size: 1.8rem;
 }
 
-.teacherpic{
+.home-teacher-image{
     height: 22rem;
     border-radius: 20px;
     /* padding-left: 15rem; */
 }
 
-.teacherphoto{
+.home-teacher-image-container{
     padding-left: 15rem;
 }
-.teacherpara{
+.home-teacher-paragraph{
   color: #e7f2f8;
   font-size: 1.2rem;
   padding: 20px 0;
   /* margin-top: -3.5rem; */
 }
 
+.teacher-footer{
+  display: flex;
+  margin: auto;
+  justify-content: start;
+}
+
 .teacher_footer_social_img{
     padding: 10px;
+}
+
+
+@media screen and (max-width:1200px) and (min-width:750px) {
+  .home-teacher-image-container{
+    padding-left: 5rem;
+  }
+  .home-teacher-paragraph{
+    width: 100%;
+  }
+  .home-teacher-image{
+    height: 20rem;
+  }
+}
+@media screen and (max-width:750px) and (min-width:414px) {
+  .home-teacher-image-container{
+    padding-left: 0rem;
+  }
+  .home-teacher-content{
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    font-size: 1rem;
+    margin: 3rem 0;
+  }
+  .home-teacher-text{
+    padding-left: 0px;
+    width: 100%;
+  }
+  .home-teacher-name{
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  .home-teacher-paragraph{
+    width: 100%;
+    text-align: center;
+  }
+  .home-teacher-image{
+    height: 15rem;
+  }
+  .home-teacher-title{
+    font-size: 1.8rem;
+  }
+  .home-teacher-moto {
+    letter-spacing: 0.3em;
+    margin-bottom: 3rem;
+  }
+  .teacher-footer{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+  }
+}
+@media screen and (max-width:414px) {
+  .home-teacher-content{
+    flex-direction: column;
+    /* align-items: center; */
+    margin: 3rem 0;
+    padding: 0;
+  }
+  .home-teacher-text{
+    padding: 10px;
+    width: 100%;
+  }
+  .home-teacher-paragraph{
+    /* width: 100%; */
+    width: auto;
+    text-align: center;
+  }
+  .home-teacher-name{
+    font-size: 1.5rem;
+    text-align: center;
+    width: 100%;
+  }
+  .home-teacher-image{
+    height: 15rem;
+  }
+  .home-teacher-image-container{
+    padding-left: 0;
+  }
+  .home-teacher-title{
+    font-size: 1.4rem;
+    padding: 0;
+  }
+  .home-teacher-moto {
+    letter-spacing: 0.3em;
+    margin-bottom: 3rem;
+  }
+  .teacher-footer{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+  }
 }
