contact btn fixed

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -58,13 +58,13 @@ input[type="text"], input[type="email"]{
 }
 /* button{
   margin-top: 10px;
-}
-button:hover{
+}*/
+.contact_sendbtn:hover{
   background-color: white;
   color: rgb(0, 162, 255);
   font-weight: bolder;
   cursor: pointer;
-} */
+} 
 .contact_sendbtn{
   margin-top: 10px;
   background-color: #2196f3;
