--- a/src/Components/AboutTemp/About-temp.css
+++ b/src/Components/AboutTemp/About-temp.css
@@ -56,7 +56,7 @@
 .secondrow {
   display: flex;
   flex-direction: row;
-  padding: 60px;
+  padding: 30px;
 }
 
 .secondrowcol1 {
@@ -140,6 +140,20 @@
   padding: 20px 0;
 }
 @media (max-width: 768px) {
+  .wheredowe{
+    font-size: 0.8rem;
+  }
+
+  .aboutusheading{
+    font-size: 1.7rem;
+  }
+  .lineaboutus1{
+    width: 25%;
+  }
+  .lineaboutus2{
+    width: 25%;
+  }
+
   .thirdrow {
     display: flex;
     flex-direction: column;
@@ -147,11 +161,19 @@
     padding: 20px;
     padding-bottom: 40px;
   }
+
+  .imagetext{
+    font-size: 1.5rem;
+  }
 }
 
 @media (max-width: 768px) {
   .secondrow {
     flex-direction: column;
+    padding-top: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
   }
   .secondrowcol1 {
     width: auto;
@@ -171,8 +193,22 @@
     align-items: center;
   }
   .divs1 {
-    border: 0;
+    padding-bottom: 5px;
+    border-bottom: 2px solid white;
+    border-right: 0;
+    padding-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
+  .divs2{
+    padding-bottom: 5px;
+    /* border-bottom: 2px solid white; */
+    border-right: 0;
+    padding-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
   .title1 {
     text-align: center;
   }
