--- a/src/Components/CoreTeam/deck.css
+++ b/src/Components/CoreTeam/deck.css
@@ -6,6 +6,53 @@
   /* margin-bottom: 50px; */
   position: relative;
 }
+
+
+.core-firstrow {
+  z-index: 100;
+  text-align: center;
+}
+
+.core-subheading {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1rem;
+  padding-top: 40px;
+  color: #57b8ff;
+  letter-spacing: 0.5em;
+}
+.core-heading {
+  font-family: "Rowdies", cursive;
+  font-size: 2.5rem;
+  padding: 20px;
+}
+.seperator {
+  display: flex;
+  margin: auto;
+}
+
+.core-line2 {
+  height: 3px;
+  width: 38%;
+  color: white;
+  z-index: 30000;
+  margin: auto;
+  background-color: azure;
+  text-align: left;
+  margin-left: 0;
+}
+
+.core-line1 {
+  height: 3px;
+  width: 38%;
+  color: white;
+  z-index: 30000;
+  margin: auto;
+  background-color: azure;
+  text-align: left;
+  margin-right: 0;
+}
+
+
 /* .button {
   background-color: #00A0FF;
   border-radius: 100px;
@@ -90,3 +137,33 @@ button:hover::after {
   color: white;
   background-color: #141820;
 } */
+
+
+@media screen and (max-width:412px) {
+  .space{
+    height: 0;
+  }
+  .core-firstrow{
+    margin-bottom: 20px;
+  }
+
+  .core-subheading{
+    font-size: 0.8rem;
+    letter-spacing: 0.4em;
+  }
+
+  .core-heading{
+    font-size: 1.7rem;
+  }
+  .core-line1{
+    width: 25%;
+    height: 2.8px;
+  }
+  .core-line2{
+    width: 25%;
+    height: 2.8px;
+  }
+
+
+
+}
