--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -80,7 +80,10 @@ li {
   transition: all 0.3s ease;
 
   opacity: 0;
-  border: 10px solid black;
+  /* border: 10px solid rgba(10, 25, 49, 0.8); */
+  border: solid 10px white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
 }
 
 .nav-link:hover:after {
