--- a/src/Components/home-projects/Project-home.css
+++ b/src/Components/home-projects/Project-home.css
@@ -13,23 +13,31 @@
   height: auto;
 }
 
-.home-project-moto{
+.home-project-moto {
   font-family: "Roboto Condensed", sans-serif;
-    font-size: 1rem;
-    padding-top: 40px;
-    color: #57b8ff;
-    letter-spacing: 0.5em;
+  font-size: 1rem;
+  padding-top: 40px;
+  color: #57b8ff;
+  letter-spacing: 0.5em;
 }
 
-.home-project-seperator{
+.home-project-seperator {
   display: flex;
-    margin: auto;
+  margin: auto;
 }
 
-.home-project-title{
+.home-project-title-our-project {
   font-family: "Rowdies", cursive;
-    font-size: 2.5rem;
-    padding: 20px;
+  font-size: 2.5rem;
+  padding: 20px;
+}
+
+.home-project-title-heading{
+  font-family: "Rowdies", cursive;
+  font-size: 1.5rem;
+  padding:10px 30px;
+  color: #719fb0;
+
 }
 
 .home-project-section {
@@ -53,7 +61,17 @@
   margin-top: 10px;
 }
 
-.seperator-decoration-line {
+.seperator-decoration-line1 {
+  height: 3px;
+  width: 35%;
+  color: white;
+  z-index: 30000;
+  margin: auto;
+  background-color: azure;
+  text-align: left;
+  margin-right: 0;
+}
+.seperator-decoration-line2 {
   height: 3px;
   width: 35%;
   color: white;
@@ -66,11 +84,11 @@
 
 .home-project-decoration-line {
   height: 2px;
-    background-color: white;
-    width: 90%;
-    margin: auto;
-    text-align: center;
-    margin-top: 10px;
+  background-color: white;
+  width: 90%;
+  margin: auto;
+  text-align: center;
+  margin-top: 10px;
 }
 
 .home-project-header {
@@ -124,7 +142,7 @@
   margin-top: 10px;
 }
 
-.view-more-container{
+.view-more-container {
   position: relative;
   text-align: left;
   width: 150px;
@@ -207,5 +225,48 @@
   }
   .home-project-description {
     font-size: 0.8rem;
+  }
+}
+
+@media screen and (max-width: 412px) {
+  .home-project-moto {
+    font-size: 0.8rem;
+    padding-top: 10px;
+    letter-spacing: 0.4em;
+  }
+  .project-component-home{
+    padding-bottom: 30px;
+  }
+  .home-project-header{
+    margin-bottom: 0;
+  }
+  .home-project-title {
+    font-size: 1.7rem;
+    color: white;
+    padding: 20px;
+  }
+  .seperator-decoration-line1 {
+    width: 15%;
+    height: 2.8px;
+  }
+  .seperator-decoration-line2{
+    width: 15%;
+    height: 2.8px;
+  }
+
+  .home-individual-project-container{
+    margin: 40px;
+  }
+  .home-project-image{
+    width: 100%;
+  }
+
+  .home-project-title-our-project{
+    font-size: 1.7rem;
+  }
+
+  .home-project-title-heading{
+    padding: 10px 0px;
+    font-size: 1.4rem;
   }
 }
