--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,5 +1,13 @@
 /* CONTACT FORM MAIN HEADLINES */
-
+.contact_main_body{
+    margin-top: -6rem;
+    background-color: rgba(10, 25, 49, 0.8);
+    position: relative;
+    z-index: 1;
+    height: auto;
+    padding-top: 6.5rem;
+    padding-bottom: 0.3rem;
+}
 .contact_headline_div{
   text-align: center;
   padding-bottom: 15px;
@@ -40,11 +48,11 @@
 /* CONTACT FULL FORM */
 
 .contact_form_details{
-      margin: 4vw auto;
+      margin: 4vw 8vw;
       width: 80%;
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
+      justify-content: space-evenly;
 }
 
 
@@ -76,8 +84,9 @@ input[type="text"], input[type="email"]{
   margin-top: 10px;
 }*/
 .contact_sendbtn:hover{
-  background-color: white;
-  color: rgb(0, 162, 255);
+  border: 3px solid rgb(0, 162, 255);
+  background-color: rgb(31, 30, 30);
+  color: rgb(237, 240, 241);
   font-weight: bolder;
   cursor: pointer;
 } 
@@ -115,7 +124,7 @@ form {
 .contact_info_email_div, .contact_info_phone_div, .contact_info_linkedin_div{
   display: flex;
   align-items: center;
-  height: 11vh;
+  height: 10vh;
 }
 .contact_infoemail, .contact_infophone, .contact_infolink{
   margin-left: 30px;
@@ -147,16 +156,16 @@ img{
 
 
 /* MEDIA QUERIES */
-  @media(max-width: 790px)
+  @media(max-width: 800px)
   {
     .contact_name_email_div{
       flex-direction: column;
     }
     .contact_form_name{
-      width: 60vw;
+      width: 72vw;
     }
     .contact_form_email{
-      width: 60vw;
+      width: 72vw;
       margin-bottom: 10px;
     }
   }
@@ -166,9 +175,15 @@ img{
       margin-left: 20px;
     }
   }
-  @media(max-width: 790px)
+  @media(max-width: 800px)
   {
     .contact_information_div{
-      margin-top: 20px;
+      margin-top: 4.6vh;
     }
+  }
+  @media(max-width: 850px) and (min-width: 800px)
+  {
+      .contact_information_div{
+        margin-left: 1vw;
+      }
   }
